crates/tmc-langs-cli/tests/snapshots/integration__checkstyle@csharp__non-compiling-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: crates/tmc-langs-cli/tests/sample_exercises/csharp/non-compiling-exercise
---
output-kind: output-data
status: finished
message: ran checkstyle
result: executed-command
data:
  output-data-kind: validation
  output-data:
    strategy: DISABLED
    validationErrors: ~

