crates/tmc-langs-cli/tests/snapshots/integration__checkstyle@csharp__passing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/passing-exercise
---
output-kind: output-data
status: finished
message: ran checkstyle
result: executed-command
data:
  output-data-kind: validation
  output-data:
    strategy: DISABLED
    validation_errors: ~
